opam-version: "2.0"
name: "myapp"
version: "0.0.1"
maintainer: "0918nobita"
authors: [
  "0918nobita"
]
homepage: "https://github.com/0918nobita/OCaml"
dev-repo: "git+https://github.com/0918nobita/OCaml.git"
bug-reports: "https://github.com/0918nobita/OCaml/issues"
build: [
  ["dune" "build" "myapp.exe"]
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build}
]
